Table of contents overflow fix (resolves #4071)

--- a/site/_scss/blocks/_toc.scss
+++ b/site/_scss/blocks/_toc.scss
@@ -57,6 +57,9 @@ toc-active {
 
   li {
     line-height: 1.2;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 
     &::before {
       display: none;
